# AxonForge

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
axonforge/: cli.py  docs_cli.py  project.py  validation.py
axonforge/core/: node.py  registry.py
axonforge/core/descriptors/: __init__.py  actions.py  base.py  displays.py  dynamic.py  fields.py  node.py  ports.py  state.py
axonforge/network/: network.py
axonforge/nodes/display/: __init__.py  basic.py  plot.py
axonforge/nodes/hypercolumn/: activations.py  cortex.py  hypercolumn.py  learning.py  learning2.py  learning3.py  learning_conv.py
axonforge/nodes/input/: attention_mask.py  drawable_mask.py  load_image.py  load_text.py
axonforge/nodes/input/dataset/: mnist_digit.py  mnist_fashion.py  occupancy.py
axonforge/nodes/input/generator/: moving_shape.py  rotating_line.py  self_playing_ping_pong.py  self_playing_tetris.py  stick_fighter.py
axonforge/nodes/linear_algebra/decomposition/: ops.py
axonforge/nodes/linear_algebra/matrix/: __init__.py  ops.py
axonforge/nodes/noise/: generators.py
axonforge/nodes/utilities/: dataset_cache.py  display_helpers.py
axonforge_qt/: bridge.py  computation_thread.py  main.py  main_window.py
axonforge_qt/canvas/: editor_scene.py  editor_view.py  node_item.py
axonforge_qt/panels/: console.py  graph_panel.py
axonforge_qt/themes/: dark.qss
docs/: autonomous_node_generation.md  node_authoring_guide.md
experiments/: train_imdv_mnist.py
utils/: audit_dependencies.py  download_cifar10.py  download_mnist_datasets.py
(+7 files in other folders)
